testsuite/tests/typing-warnings/pr7261.compilers.reference
Line 7, characters 19-21:
7 |     Foo: [> `Bla ] as 'b ) * 'b -> foo;;
                       ^^
Error: Syntax error
Line 2, characters 35-49:
2 |     Foo: 'b * 'b -> foo constraint 'b = [> `Bla ];;
                                       ^^^^^^^^^^^^^^
Warning 62 [constraint-on-gadt]: Type constraints do not apply to GADT cases
  of variant types.

type foo = Foo : 'b * 'b -> foo

